# python-lsp-jsonrpc

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: static.yml  test-linux.yml  test-mac.yml  test-win.yml
examples/: langserver.py  langserver_ext.py
pylsp_jsonrpc/: __init__.py  _version.py  dispatchers.py  endpoint.py  exceptions.py  streams.py
test/: test_endpoint.py  test_streams.py
