[metadata]
name = python-lsp-jsonrpc
author = Python Language Server Contributors
description = JSON RPC 2.0 server library
url = https://github.com/python-lsp/python-lsp-jsonrpc
long_description = file: README.md
long_description_content_type = text/markdown


[options]
packages = find:
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
install_requires = ujson>=3.0.0

[options.packages.find]
exclude =
    contrib
    docs
    test
    test.*

[options.extras_require]
test =
    pylint
    pycodestyle
    pyflakes
    pytest
    pytest-cov
    coverage

[pycodestyle]
ignore = E226, E722, W504
max-line-length = 120
exclude = test/plugins/.ropeproject,test/.ropeproject

[tool:pytest]
testpaths = test
addopts =
    --cov-report html --cov-report term --junitxml=pytest.xml
    --cov pylsp_jsonrpc --cov test
